# Hermes

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/superpowers/plans/: 2026-05-22-hermes-implementation.md  2026-05-30-hermes-v2.md
hermes/: __init__.py  __main__.py  audit.py  config.py  db.py  embeddings.py  health.py  notify.py
hermes/ingestors/: __init__.py  obsidian.py  rss.py
hermes/pipeline/: __init__.py  analyze.py  assess.py  backtest.py  dedup.py  enrich.py  filter.py  postfilter.py  prefilter.py  run.py  synthesize.py  test_prompts.py  write.py
hermes/prompts/: assess.txt  synthesize.txt  synthesize_cross.txt  theme_extract.txt
hermes/web/: app.py
migrations/: 001_init.sql  002_add_domain.sql  002_conclusion_type.sql  003_add_conclusion_lineage.sql  003_category_tags.sql  004_add_surprise_score.sql  004_conclusion_category.sql  005_add_trigger_type.sql  006_add_domain_proposed.sql
tests/: test_analyze.py  test_assess.py  test_audit.py  test_backtest.py  test_config.py  test_db.py  test_dedup.py  test_e2e.py  test_embeddings.py  test_enrich.py  test_filter.py  test_health.py  test_notify.py  test_obsidian.py  test_postfilter.py  test_prefilter.py  test_rss.py  test_surprise.py  test_synthesize.py  test_test_prompts.py  test_web.py  test_write.py
tests/fixtures/: 001_ai_tools_copilot.json  002_ai_tools_cursor.json  003_llm_safety_jailbreak.json  004_llm_safety_poisoning.json  005_mideast_shipping.json  006_mideast_diplomacy.json  007_energy_opec.json  008_energy_renewables.json  009_geopolitical_chips.json  010_geopolitical_arctic.json
(+9 files in other folders)
