[project]
name = "hermes"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "html2text>=2024.2",
    "openai>=1.0",
    "sentence-transformers>=3.0",
    "python-frontmatter>=1.0",
    "pyyaml>=6.0",
    "requests>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
hermes = "hermes.__main__:main"
